fix some thing on mobile & add two components

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -36,9 +36,12 @@ a:hover {
  * Base structure
  */
 
-html,
-body {
+html {
   height: 100%;
+  background-color: #333;
+}
+body {
+  min-height: 100%;
   background-color: #333;
 }
 
@@ -115,4 +118,5 @@ body {
  */
 .mastfoot {
   color: rgba(255, 255, 255, .5);
+  /*max-height: 1em;*/
 }
